fix for crazy spacing textarea issue

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -130,10 +130,6 @@ form {
                 }
             }
         }
-
-        textarea {
-            height: 100%;
-        }
     }
 
     select {
